# wakeupword

./: CMakeLists.txt  LICENSE  README.md  demo.cpp  labels.txt
include/tensorflow/lite/: interpreter_builder.cc
include/tensorflow/lite/_objs/allocation/: allocation.pic.d  mmap_allocation.pic.d
include/tensorflow/lite/_objs/arena_planner/: arena_planner.pic.d
include/tensorflow/lite/_objs/cc_api_experimental/: graph_info.pic.d  interpreter_builder_experimental.pic.d  interpreter_experimental.pic.d  signature_runner.pic.d  subgraph.pic.d
include/tensorflow/lite/_objs/cc_api_stable/: interpreter.pic.d  interpreter_builder.pic.d
include/tensorflow/lite/_objs/external_cpu_backend_context/: external_cpu_backend_context.pic.d
include/tensorflow/lite/_objs/minimal_logging/: minimal_logging.pic.d  minimal_logging_default.pic.d
include/tensorflow/lite/_objs/model_builder/: model_builder.pic.d
include/tensorflow/lite/_objs/mutable_op_resolver/: mutable_op_resolver.pic.d
include/tensorflow/lite/_objs/optional_debug_tools/: optional_debug_tools.pic.d
include/tensorflow/lite/_objs/simple_memory_arena/: simple_memory_arena.pic.d
include/tensorflow/lite/_objs/stderr_reporter/: stderr_reporter.pic.d
include/tensorflow/lite/_objs/string_util/: string_util.pic.d
include/tensorflow/lite/_objs/tflite_with_xnnpack_optional/: tflite_with_xnnpack_optional.pic.d
include/tensorflow/lite/_objs/util/: util.pic.d
include/tensorflow/lite/c/_objs/common/: common.pic.d
include/tensorflow/lite/core/api/_objs/api/: flatbuffer_conversions.pic.d  tensor_utils.pic.d
include/tensorflow/lite/core/api/_objs/error_reporter/: error_reporter.pic.d
include/tensorflow/lite/core/api/_objs/op_resolver/: op_resolver.pic.d
include/tensorflow/lite/delegates/_objs/telemetry/: telemetry.pic.d
include/tensorflow/lite/delegates/xnnpack/_objs/quantization_util/: quantization_util.pic.d
include/tensorflow/lite/delegates/xnnpack/_objs/xnnpack_delegate/: xnnpack_delegate.pic.d
include/tensorflow/lite/experimental/resource/_objs/resource/: initialization_status.pic.d  resource_variable.pic.d  static_hashtable.pic.d
include/tensorflow/lite/kernels/_objs/builtin_op_kernels/: activations.pic.d  add.pic.d  add_n.pic.d  arg_min_max.pic.d  assign_variable.pic.d  audio_spectrogram.pic.d  basic_rnn.pic.d  batch_matmul.pic.d  batch_to_space_nd.pic.d  bidirectional_sequence_lstm.pic.d  bidirectional_sequence_rnn.pic.d  broadcast_args.pic.d  broadcast_to.pic.d  call_once.pic.d  cast.pic.d  ceil.pic.d  comparisons.pic.d  complex_support.pic.d  concatenation.pic.d  conv.pic.d  conv3d.pic.d  conv3d_transpose.pic.d  cumsum.pic.d  densify.pic.d  depth_to_space.pic.d  depthwise_conv.pic.d  dequantize.pic.d  detection_postprocess.pic.d  div.pic.d  elementwise.pic.d  embedding_lookup.pic.d  embedding_lookup_sparse.pic.d  exp.pic.d  expand_dims.pic.d  fake_quant.pic.d  fill.pic.d  floor.pic.d  floor_div.pic.d  floor_mod.pic.d  fully_connected.pic.d  (+68 more)
include/tensorflow/lite/kernels/_objs/builtin_ops_all_linked/: register.pic.d
include/tensorflow/lite/kernels/_objs/cpu_backend_context/: cpu_backend_context.pic.d
include/tensorflow/lite/kernels/_objs/cpu_backend_gemm/: cpu_backend_gemm_eigen.pic.d
include/tensorflow/lite/kernels/_objs/eigen_support/: eigen_support.pic.d
include/tensorflow/lite/kernels/_objs/kernel_util/: kernel_util.pic.d
include/tensorflow/lite/kernels/_objs/lstm_eval/: lstm_eval.pic.d
include/tensorflow/lite/kernels/internal/_objs/audio_utils/: mfcc.pic.d  mfcc_dct.pic.d  mfcc_mel_filterbank.pic.d  spectrogram.pic.d
include/tensorflow/lite/kernels/internal/_objs/cpu_check/: cpu_check.pic.d
include/tensorflow/lite/kernels/internal/_objs/kernel_utils/: kernel_utils.pic.d
include/tensorflow/lite/kernels/internal/_objs/neon_tensor_utils/: neon_tensor_utils.pic.d
include/tensorflow/lite/kernels/internal/_objs/portable_tensor_utils/: portable_tensor_utils.pic.d
include/tensorflow/lite/kernels/internal/_objs/quantization_util/: quantization_util.pic.d
include/tensorflow/lite/kernels/internal/_objs/sse_tensor_utils/: sse_tensor_utils.pic.d
include/tensorflow/lite/kernels/internal/_objs/tensor_utils/: tensor_utils.pic.d
include/tensorflow/lite/kernels/internal/_objs/transpose_utils/: transpose_utils.pic.d
include/tensorflow/lite/kernels/internal/utils/_objs/sparsity_format_converter/: sparsity_format_converter.pic.d
include/tensorflow/lite/libtensorflowlite.so.runfiles/: MANIFEST
include/tensorflow/lite/profiling/_objs/platform_profiler/: platform_profiler.pic.d
include/tensorflow/lite/schema/: schema_generated.h
include/tensorflow/lite/schema/_objs/schema_utils/: schema_utils.pic.d
prebuilt/portaudio/x86/: libportaudio.la  libportaudio.so.2.0.0
run_demo_arm/: demo  widya_wakeword_model_lite.tflite
run_demo_arm/lib/: libportaudio.so.2.0.0
